# examples-rust

./: .gitignore  README.md  hello  hello.rs
activ-example/: Cargo.toml
activ-example/src/: main.rs
advent/: Cargo.toml
advent/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  main.rs
android_example/: .gitignore  cargo-config.toml  set_up.sh
android_example/cargo/: Cargo.toml
android_example/cargo/src/: lib.rs
architecture/: Cargo.toml
architecture/src/: main.rs
async/example_async/: Cargo.toml
async/example_async/src/: main.rs
aws_example/: Cargo.toml  README.md
aws_example/src/: main.rs
capnp-rpc-hello/: Cargo.toml  README.md  build.rs
capnp-rpc-hello/src/: client.rs  hello.capnp  main.rs  server.rs
chat/: Cargo.toml
chat/src/: lib.rs
collatz-may/: Cargo.toml
collatz-may/src/: main.rs
collatz-multiplexed/: Cargo.toml
collatz-multiplexed/src/: client.rs  lib.rs  server.rs
concurrency/: closure1.rs
cpp-to-rust/: run
cpp_rust_wrap/: CMakeLists.txt
cpp_rust_wrap/client/: CMakeLists.txt  Cargo.toml
cpp_rust_wrap/client/src/: lib.rs
cpp_rust_wrap/cpp_client/: CMakeLists.txt  main.cpp
diesel_demo/: Cargo.toml
diesel_demo/migrations/00000000000000_diesel_initial_setup/: .up.sql.swp
diesel_demo/migrations/2018-10-17-200106_create_posts/: up.sql
diesel_demo/src/: lib.rs
example-ffmpeg/: Cargo.toml  README.md
example-ffmpeg/src/: remux.rs
example-ffmpeg2/: Cargo.toml  Makefile.vim  README.md
example-ffmpeg2/src/: main.rs
example-websocket/: Cargo.toml
example-websocket/src/: main.rs
example_capnprot/: Cargo.toml  build.rs
example_capnprot/src/: hello.capnp  main.rs  server.rs
example_rest_v2/: Cargo.toml  README.md
example_rest_v2/src/: main.rs
example_tokio_v2/: Cargo.toml
example_tokio_v2/src/: lib.rs  main.rs
examples_aws_lambda2/ex2/: setup.sh
examples_aws_lambda2/ex3/: Cargo.toml
examples_aws_lambda2/ex3/src/: db.rs  main.rs
futures-chaining/: Cargo.toml
futures-chaining/src/: main.rs
futures-example/: Cargo.toml
futures-example/src/: main.rs
guessing_game/: Cargo.toml
hackerrank/: Cargo.toml  Makefile.vim
hackerrank/src/: exer1.rs  exer2.rs  exer3.rs  exer4.rs
hello-rocket/: .gitignore  Cargo.toml
hello-rocket/migrations/: up.sql
hello-rocket/src/: main.rs  schema.rs
hello-world/: Cargo.toml
hello-world/src/: main.rs
hyper-async-await/: Cargo.toml
hyper-async-await/src/: main.rs
hyper-server/: Cargo.toml
hyper-server-faster/: Cargo.toml
hyper-server-faster/src/: main.rs
hyper-server/src/: main.rs
ip_sniffer/: Cargo.toml
ip_sniffer/src/: main.rs
message-server/: Cargo.toml
message-server/src/: discovery_server.rs  lib.rs
mq_example/: README.md
mq_example/client_mq/: Cargo.toml
mq_example/client_mq/src/: .main.rs.swp  main.rs
mqtt_example/: README.md
multiple-threads/: Cargo.toml
multiple-threads/src/: main.rs
my_rocket_diesel_demo/: Cargo.toml  README.md
my_rocket_diesel_demo/migrations/2018-12-02-221320_create_tasks/: down.sql  up.sql
my_rocket_diesel_demo/src/: db.rs  main.rs  models.rs  schema.rs
net/: tcp-client-timeout.rs  tcp-echo-server.rs  tcp_client.rs  udp-client.rs  udp-echo-server.rs  udp-multicast.rs
others/: channels.rs  example_rc.rs  ftp_client.rs  guessing_game.rs  test_and_then.rs  test_bounds.rs  test_box.rs  test_builder.rs  test_builder2.rs  test_generics.rs  test_interr.rs  test_macros.rs  test_map_reduce.rs  test_mut_object.rs  test_option.rs  test_polymorphism.rs  test_result.rs
others/ftp-server/: .gitignore  Cargo.toml
others/ftp-server/src/: .main.rs.swp  codec.rs  main.rs
p2p-example/: .gitignore  Cargo.toml
patterns/: flyweight_example.rs
pencil-hello/: Cargo.toml  hello.html
pencil-hello/src/: .main.rs.swp  main.rs
reqwest-example/: Cargo.toml
reqwest-example/src/: main.rs
reverse-proxy/: Cargo.toml  Makefile.vim  README.md  config.yml
reverse-proxy/src/: config.rs  http-proxy.rs  main.rs  tcp-proxy-2.rs  tcp-proxy.rs  tcpproxy.rs
rocket-blog/: Cargo.toml  db
rocket-blog/src/: db.rs  error.rs  main.rs  models.rs  post.rs
rocket-simple/: Cargo.toml
rocket-simple/src/: main.rs
rust-p2p-example/: Cargo.toml  README.md
rust-p2p-example/src/: main.rs
streams/: Cargo.toml
streams/src/: main.rs
structures/: list1.rs  time_travel.rs
structures/time_travel/: Cargo.toml  Makefile.vim
structures/time_travel/src/: main.rs
test-libc/: Cargo.toml
test-libc/src/: main.rs
tokio-curl/: Cargo.toml
tokio-curl/src/: main.rs
trait-example/src/: main.rs
web_example/: Cargo.toml  README.md
web_example/migrations/2018-11-04-190206_create_tasks/: up.sql
web_example/src/: lib.rs  main.rs  models.rs  schema.rs
web_example/src/db/: mod.rs  tasks.rs
web_example/src/models/: task.rs
web_example/src/routes/: messages.rs
websocket-chat/: Cargo.toml
websocket-chat/src/: server.rs
