[package]
name = "example-ffmpeg"
version = "0.1.0"
authors = ["carlosb1 <mcflurry0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc='0.2'
ffmpeg-dev='0.3.8'

[[bin]]
name="main"
path="src/main.rs"

[[bin]]
name = "remux"
path="src/remux.rs"

[[bin]]
name = "video-decode"
path="src/video-decode.rs"
