[package]
name = "example-ffmpeg2"
version = "0.1.0"
authors = ["carlosb1 <mcflurry0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio= {version = "1", features=["full"]}
http="0.2.3"
warp="0.3"
ffmpeg-next='4.3.8'
getopts = '0.2'
futures= '0.3.13'
log='0.4'
pretty_env_logger='0.3'

[[bin]]
name='main'
path='src/main.rs'

[[bin]]
name='dump-frames'
path='src/dump-frames.rs'
