[package]
name = "example_rest_v2"
version = "0.1.0"
authors = ["carlosb <mcflurry0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"]}
dotenv = "0.9.0"
rocket = "0.4.2"
serde_json = "1.0"
