[package]
name = "example_tokio_v2"
version = "0.1.0"
authors = ["Carlos B <carlos.baez@optimasports.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1.12"
tokio-io = "0.1.12"
tokio-codec = "0.1.1"
bytes = "0.4.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono="0.4"
