[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["Carlos B <carlos.baezruiz@gmail.com>"]

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
serde  = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = {version = "1.0.0", features = ["postgres"]}
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version="*"
default-features=false
features=["json"]




