[package]
name = "message-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
message-io = "0.16"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "dist-server"
path = "src/discovery_server.rs"
