[package]
name = "multiple-threads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1.28.2", features = ["full"] }
