[package]
name = "my_rocket_diesel_demo"
version = "0.1.0"
authors = ["Carlos B <carlos.baezruiz@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"
rocket = "0.3.5"
rocket_codegen = "0.3.5"
rocket_contrib = "0.3.5"
serde = "1.0.21"
serde_json = "1.0.6"
serde_derive = "1.0.21"
lazy_static = "0.2.11"

