[package]
name = "reverse-proxy"
version = "0.1.0"
authors = ["carlosb1 <mcflurry0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
log = "0.4"
pretty_env_logger = "0.3"
futures = "0.3.6"
getopts = "0.2.21"
rand = "0.7.3"
trust-dns-resolver = "0.19.5"
tokio = { version = "1", features = ["full"] }
warp = '0.3'
warp-reverse-proxy='0.3'

[[bin]]
name='main'
path='src/main.rs'

[[bin]]
name='http-proxy'
path='src/http-proxy.rs'

[[bin]]
name='tcp-proxy'
path='src/tcp-proxy.rs'
