[package]
name = "web_example"
version = "0.1.0"
authors = ["Carlos B <carlos.baezruiz@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version="1.0.0", features=["postgres"]}
dotenv = "0.9.0"
rocket = "0.4.0-rc.1"
rocket_codegen = "0.4.0-rc.1"
rocket_contrib = "0.4.0-rc.1"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"

